messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging_app-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging_app
      version: green
  template:
    metadata:
      labels:
        app: messaging_app
        version: green
    spec:
      containers:
        - name: messaging_app
          image: zeezbabadev/messaging_app:v2 
          ports:
            - containerPort: 8000
