messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging_app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging_app
  template:
    metadata:
      labels:
        app: messaging_app
    spec:
      containers:
        - name: messaging_app
          image: zeezbabadev/messaging_app:latest  # Change this to your actual image
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: messaging_app-service
spec:
  selector:
    app: messaging_app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
