messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging_app-service
spec:
  selector:
    app: messaging_app
    version: green     # <--- Switch this to "blue" or "green" to route traffic!
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
